--- a/src/main/webapp/resources/estilo.css
+++ b/src/main/webapp/resources/estilo.css
@@ -4,49 +4,41 @@ body {
 	font-size: 12px;
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 0px;
-	font-weight: normal
+	font-weight: normal;
+	background: #0892d0;
 }
 
-header {
-	display: flex;
-	margin-bottom: 10px;
-	height: 135px;
-	background-color: #0892d0;
-	color: #fff;
-	box-shadow: 0px 2px 2px #ccc;
-}
-
-.div-image {
-	display: flex;
-	border: 1px solid #fff;
-	padding: 2px 0px;
-	position: relative;
-}
-
-.tag-image {
-	max-width: 250px;
-	align-items: center;
+.title-text {
+	font-size: 20px;
+	color: white;
+	padding: 0px 15px;
 }
 
 #conteudo {
-	padding: 0px 8px
+	padding: 0px 15px;
 }
 
 footer {
 	border-top: 1px solid #0892d0;
-	padding: 10px 8px;
-	margin-top: 20px;
+	padding: 10px 10px;
+	margin-top: 100px;
 	margin-bottom: 10px;
-	text-align: center;
-	font-size: 15px;
-	font-weight: 600;
-	font-style: italic;
 }
 
-h1 {
-	font-size: 24px;
-	font-weight: 500;
-	padding: 0px;
-	margin: 0px;
-	margin-bottom: 10px
+.text-footer {
+	color: white;
+	font-style: italic;
+	text-decoration: underline;
+	text-align: center;
+	font-size: 20px;
+	font-weight: 600;
+}
+
+.div-image {
+    padding: 15px;
+    text-align: center;
+}
+
+.tag-image {
+	max-width: 500px;
 }
