--- a/src/main/webapp/resources/estilo.css
+++ b/src/main/webapp/resources/estilo.css
@@ -42,3 +42,15 @@ footer {
 .tag-image {
 	max-width: 500px;
 }
+
+.mr-1 {
+	margin-right: 0.25rem !important;
+}
+
+.mr-2 {
+	margin-right: 0.5rem !important;
+}
+
+.mr-3 {
+	margin-right: 1rem !important;
+}
