--- a/src/main/webapp/WEB-INF/template/layout.xhtml
+++ b/src/main/webapp/WEB-INF/template/layout.xhtml
@@ -5,31 +5,93 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-<h:head>
-	<meta charset="UTF-8"/>
-	<title>Gestão Empresas</title>
-	<h:outputStylesheet name="estilo.css" />
-</h:head>
+	<h:head>
+		<meta charset="UTF-8"/>
+		<title>JSF e PrimeFaces</title>
+		<h:outputStylesheet name="estilo.css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"/>
+	</h:head>
+	
+	<h:body>
+		<nav class="menu-lateral">
+			<div class="btn-expandir">
+				<i class="bi bi-list" id="idBtnExpandir"></i>
+			</div>
+			
+			<ul>
+				<li class="item-menu ativo">
+					<a href="#">
+						<span class="icon"><i class="bi bi-house-door"></i></span>
+						<span class="txt-link">Home</span>
+					</a>
+				</li>
+				<li class="item-menu">
+					<a href="#">
+						<span class="icon"><i class="bi bi-person"></i></span>
+						<span class="txt-link">Pessoa</span>
+					</a>
+				</li>
+				<li class="item-menu">
+					<a href="#">
+						<span class="icon"><i class="bi bi-archive"></i></span>
+						<span class="txt-link">Produto</span>
+					</a>
+				</li>
+				<li class="item-menu">
+					<a href="#">
+						<span class="icon"><i class="bi bi-buildings"></i></span>
+						<span class="txt-link">Empresa</span>
+					</a>
+				</li>
+				<li class="item-menu">
+					<a href="#">
+						<span class="icon"><i class="bi bi-person-gear"></i></span>
+						<span class="txt-link">Conta</span>
+					</a>
+				</li>
+			</ul>
+		</nav>
+		
+		<section class="dashboard">
+			<header>
+				<h2 class="title-text">
+					<ui:insert name="titulo" />
+				</h2>
+			</header>
+		
+			<div id="conteudo">
+				<ui:insert name="conteudo" />
+			</div>
+		
+			<footer>
+				<div class="div-image">
+					<h:graphicImage class="tag-image" library="images" name="logo-SenaiB.svg"/>
+				</div>
+				<div class="text-footer">
+					Desenvolvimento Web com JSF e PrimeFaces.
+				</div>
+			</footer>
+		</section>
+		
+		<script>
+			let menuItem = document.querySelectorAll('.item-menu');
+			let btnExpandir = document.querySelector('#idBtnExpandir');
+			let menuSide = document.querySelector('.menu-lateral');
 
-<h:body>
-	<header>
-		<h2 class="title-text">
-			<ui:insert name="titulo" />
-		</h2>
-	</header>
+			menuItem.forEach((item) => {
+				item.addEventListener('click', function() {
+					menuItem.forEach((item) => {
+						item.classList.remove('ativo')
+					});
 
-	<div id="conteudo">
-		<ui:insert name="conteudo" />
-	</div>
+					this.classList.add('ativo')
+				});
+			});
 
-	<footer>
-		<div class="div-image">
-			<h:graphicImage class="tag-image" library="images" name="logo-SenaiB.svg"/>
-		</div>
-		<div class="text-footer">
-			Desenvolvimento Web com JSF e PrimeFaces.
-		</div>
-	</footer>
-</h:body>
+			btnExpandir.addEventListener('click', function() {
+				menuSide.classList.toggle('expandir')
+			});
+		</script>
+	</h:body>
 
 </html>
