--- a/src/main/webapp/resources/estilo.css
+++ b/src/main/webapp/resources/estilo.css
@@ -14,9 +14,9 @@ body {
 .menu-lateral {
 	width: 55px;
 	height: 100%;
-	background-color: black;
+	background-color: #0892d0;
 	padding: 20px 0px;
-	box-shadow: 3px 0 0 #0892d0;
+	border-right: 1px solid #FFF;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -36,7 +36,7 @@ nav.menu-lateral.expandir {
 }
 
 .btn-expandir > i {
-	color: #fff;
+	color: #FFF;
 	font-size: 35px;
 	cursor: pointer;
 }
@@ -51,15 +51,24 @@ ul li.item-menu {
 }
 
 ul li.ativo {
-	background-color: #0892d0;
+	background-color: #FFF;
 }
 
 ul li.item-menu:hover {
-	background: #0892d0;
+	background: #FFF;
 }
 
 ul li.item-menu a {
-	color: #fff;
+	color: #FFF;
+	text-decoration: none;
+	font-size: 20px;
+	padding: 20px 5%;
+	display: flex;
+	line-height: 40px;
+}
+
+ul li.item-menu a:hover {
+	color: #0892d0;
 	text-decoration: none;
 	font-size: 20px;
 	padding: 20px 5%;
@@ -88,9 +97,27 @@ ul li.item-menu a .icon > i {
 	margin-left: 10px;
 }
 
+.dashboard {
+	position: relative;
+	left: 55px;
+	background-color: #0892d0;
+	height: 100vh;
+	width: calc(100% - 55px);
+	transition: 0.5s;
+}
+
+nav.menu-lateral.expandir ~ .dashboard {
+	position: relative;
+	left: 300px;
+	background-color: #0892d0;
+	height: 100vh;
+	width: calc(100% - 300px);
+	transition: 0.5s;
+}
+
 .title-text {
 	font-size: 20px;
-	color: white;
+	color: #FFF;
 	padding: 0px 15px;
 }
 
@@ -99,7 +126,6 @@ ul li.item-menu a .icon > i {
 }
 
 footer {
-	border-top: 1px solid #0892d0;
 	padding: 10px 10px;
 	margin-top: 100px;
 	margin-bottom: 10px;
